--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,6 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-
-  http: ^0.13.3
-  intl: ^0.17.0
   flutter:
     sdk: flutter
 
@@ -31,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  animations: ^2.0.0
+  flutter_plugin_pdf_viewer: ^1.0.7
+  http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -48,8 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/bell.png
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
