--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   animations: ^2.0.0
-  flutter_plugin_pdf_viewer: ^1.0.7
+  flutter_cached_pdfview: ^0.3.5
   http: ^0.12.0
+  url_launcher: ^5.7.5
 
 
 dev_dependencies:
