--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_cached_pdfview: ^0.3.5
   http: ^0.12.0
   url_launcher: ^5.7.5
+  get_storage: ^1.3.2
+  get:
 
 
 dev_dependencies:
