--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   animations: ^2.0.0
   flutter_cached_pdfview: ^0.3.5
-  http: ^0.12.0
-  url_launcher: ^5.7.5
-  get_storage: ^1.3.2
-  get:
+  http: any
+  url_launcher: any
+  get_storage: any
+  get: any
+  google_fonts: any
 
 
 dev_dependencies:
@@ -31,4 +32,3 @@ flutter:
   assets:
     - images/bell.png
     - images/logo.png
-    - images/download.png
